# mmarch

./: .editorconfig  .gitattributes  .gitignore  LICENSE  LICENSE.md  MMArchCompare.pas  MMArchMain.pas  MMArchPath.pas  MMArchUnit.pas  README.md  mmarc.bdsproj  mmarc.dpr  mmarch.bdsproj  mmarch.dpr  mmarch.res
icon/: icon.ai
mmarch-delphi/: .gitignore  MMArchChecksum.pas  MMArchCompare.pas  mmarch.dpr  (+4 more)
mmarch-rust/: .gitignore  Cargo.toml
mmarch-rust/src/: archive.rs  checksum.rs  compare.rs  lod.rs  main.rs  path_utils.rs  script_gen.rs  snd.rs  vid.rs
mmarch-rust/tests/: integration.rs
mmarch-rust/tests/data_compare/compare test v1/deleted folder文件夹/: deleted.lod
mmarch-rust/tests/data_compare/compare test v1/deleted folder文件夹/deleted L2 folder/: deleted file 2 in L2文件.txt  deleted file 3 in L2文件.txt
mmarch-rust/tests/data_compare/compare test v1/folder w modified files/: icons.lod
mmarch-rust/tests/data_compare/compare test v2/added folder文件夹/: added_file文件2.txt
mmarch-rust/tests/data_compare/compare test v2/folder w modified files/: icons.lod
mmarch-rust/tests/data_compare/compare test v3/added folder文件夹/: added.lod  added_file文件.txt
mmarch-rust/tests/data_compare/compare test v3/folder w modified files/: icons.lod
mmarch-rust/tests/data_general/: pal994.act  real_audio.snd  real_bitmaps.lod  real_games6.lod  real_games78.lod  real_h3.lod  real_h3.snd  real_h3.vid  real_icons.lod  real_mm8loc.T.lod  real_save6.mm6  real_save78.mm7  real_sprites.lod  real_video.vid
mmarch-rust/tests/data_general/failsafe_test/: hasincorrectresource.icons.lod
(+30 files in other folders)
